--- a/.env
+++ b/.env
@@ -1,12 +1,22 @@
 RESTART=always
 
-SCHEDULE_TIME_CHECK="*/10 * * * * *"
+#Check every 10 mintes
+SCHEDULE_TIME_CHECK="* */10 * * * *"
+
+#Your GitHub username
 GIT_AUTH_USERNAME="XXXXXXXXX"
+#Your personal access token https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/creating-a-personal-access-token
 GIT_AUTH_PERSONAL_ACCESS_TOKEN="XXXXXXX"
+
+#The project to check and restart
 GIT_PROJECT_OWNER="XXXXXXXX"
 GIT_PROJECT_REPO="XXXXXXXX"
 GIT_BRANCH="main"
+
+#Full path to your project on your computer
 FOLDER_PATH_TO_PROJECT="XXXXXXXX"
+
+#Default is GitHub but you can configure it to "GitLab" and adapt the base url to GitLab V4 Server (without /api/)
 REPOSITORY_MANAGEMENT_BASE_URL="https://api.github.com"
 REPOSITORY_MANAGEMENT="GitHub"
 GIT_AUTH_CREDENTIAL_FIELDNAME_USER="username"
