Update for Proxies

--- a/.env
+++ b/.env
@@ -20,3 +20,8 @@ FOLDER_PATH_TO_PROJECT="XXXXXXXX"
 REPOSITORY_MANAGEMENT_BASE_URL="https://api.github.com"
 REPOSITORY_MANAGEMENT="GitHub"
 GIT_AUTH_CREDENTIAL_FIELDNAME_USER="username"
+
+#For usage with proxies
+#HTTP_PROXY=""
+#HTTPS_PROXY=""
+#NO_PROXY=""
