--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -32,3 +32,8 @@ services:
       - GIT_BRANCH=${GIT_BRANCH}
       - FOLDER_PATH_TO_PROJECT=${FOLDER_PATH_TO_PROJECT}
       - GIT_AUTH_CREDENTIAL_FIELDNAME_USER=${GIT_AUTH_CREDENTIAL_FIELDNAME_USER}
+      - CUSTOM_COMMAND_PRE_COMMANDS=${CUSTOM_COMMAND_PRE_COMMANDS}
+      - HTTP_PROXY=${HTTP_PROXY}
+      - HTTPS_PROXY=${HTTPS_PROXY}
+      - NO_PROXY=${NO_PROXY}
+      - GLOBAL_AGENT_HTTP_PROXY=${HTTPS_PROXY}
