--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "types": "index.d.ts",
   "scripts": {
-    "start": "npm run build && node ./build/ignoreCoverage/development.js",
+    "start": "npm run build && node -r 'global-agent/bootstrap' ./build/ignoreCoverage/development.js",
     "_prepareBuild": "rm -rf ./build",
     "build": "npm run _prepareBuild && rimraf ./build && tsc && cp package.json ./build && cp README.md ./build",
     "dev": "nodemon",
@@ -57,6 +57,7 @@
     "@babel/preset-typescript": "^7.14.5",
     "axios": "^0.26.0",
     "docker-github-reloader": "^0.0.12",
+    "global-agent": "^3.0.0",
     "ssh2shell": "^1.9.8"
   }
 }
