Example Update Env

--- a/.env
+++ b/.env
@@ -4,17 +4,17 @@ RESTART=always
 SCHEDULE_TIME_CHECK="* */10 * * * *"
 
 #Your GitHub username
-GIT_AUTH_USERNAME="XXXXXXXXX"
+GIT_AUTH_USERNAME="<myusername@example.com>"
 #Your personal access token https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/creating-a-personal-access-token
-GIT_AUTH_PERSONAL_ACCESS_TOKEN="XXXXXXX"
+GIT_AUTH_PERSONAL_ACCESS_TOKEN="<ghp_XXXXXXXXXXXXXXXXXX>"
 
 #The project to check and restart
-GIT_PROJECT_OWNER="XXXXXXXX"
-GIT_PROJECT_REPO="XXXXXXXX"
+GIT_PROJECT_OWNER="<MyUsername>"
+GIT_PROJECT_REPO="<MyProjectname>"
 GIT_BRANCH="main"
 
 #Full path to your project on your computer
-FOLDER_PATH_TO_PROJECT="XXXXXXXX"
+FOLDER_PATH_TO_PROJECT="</Users/myuser/..../GitHub/MyProjectname>"
 
 #Default is GitHub but you can configure it to "GitLab" and adapt the base url to GitLab V4 Server (without /api/)
 REPOSITORY_MANAGEMENT_BASE_URL="https://api.github.com"
