--- a/.env
+++ b/.env
@@ -1,28 +1,18 @@
+# All configuretions can be found here:
+# https://github.com/FireboltCasters/Observatory/wiki
+
 RESTART=always
 
 #Check every 10 mintes
-SCHEDULE_TIME_CHECK="0 */1 * * * *"
+SCHEDULE_TIME_CHECK="0 */10 * * * *"
 
-#Your GitHub username
-GIT_AUTH_USERNAME='nibaumgartne'
-#Your personal access token https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/creating-a-personal-access-token
-GIT_AUTH_PERSONAL_ACCESS_TOKEN="XXXXXXXXXXXXXX"
+# Client
+GIT_AUTH_USERNAME="myGitHubUsername@example.com
+GIT_AUTH_PERSONAL_ACCESS_TOKEN="ghp_XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
 
-#The project to check and restart
-GIT_PROJECT_OWNER="nibaumgartne"
-GIT_PROJECT_REPO="hiwis"
-GIT_BRANCH="main"
+# Repository
+GIT_PROJECT_OWNER="FireboltCasters"
+GIT_PROJECT_REPO="Observatory"
 
-#Full path to your project on your computer
-FOLDER_PATH_TO_PROJECT="/root/Services/hiwis"
-
-#Default is GitHub but you can configure it to "GitLab" and adapt the base url to GitLab V4 Server (without /api/)
-REPOSITORY_MANAGEMENT_BASE_URL="https://vm862.rz.uos.de/"
-REPOSITORY_MANAGEMENT="GitLab"
-GIT_AUTH_CREDENTIAL_FIELDNAME_USER="username"
-
-#For usage with proxies
-HTTP_PROXY="http://www-proxy.rz.uni-osnabrueck.de:80"
-HTTPS_PROXY="http://www-proxy.rz.uni-osnabrueck.de:80"
-NO_PROXY="127.0.0.1,localhost"
-CUSTOM_COMMAND_PRE_COMMANDS="export GIT_SSL_NO_VERIFY=true"
+# Full path to your project on your computer
+FOLDER_PATH_TO_PROJECT="/root/Services/Observatory"
